--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,13 +1,10 @@
 {
-    "python.pythonPath": "C:/Python/python",
-    "editor.formatOnSave": true,
-    "python.linting.pep8Enabled": true,
-    "python.linting.pylintPath": "pylint",
-    "python.linting.pylintArgs": [
-        "--load-plugins",
-        "pylint_django"
-    ],
-    "python.venvPath": "$(workspaceFolder)/backend/env/Scripts/python",
-    "python.linting.pylintEnabled": true,
-    "python.formatting.provider": "autopep8"
+  "python.pythonPath": "/usr/local/bin/python3",
+  "editor.formatOnSave": true,
+  "python.linting.pep8Enabled": true,
+  "python.linting.pylintPath": "pylint",
+  "python.linting.pylintArgs": ["--load-plugins", "pylint_django"],
+  "python.venvPath": "$(workspaceFolder)/backend/env/bin/python",
+  "python.linting.pylintEnabled": true,
+  "python.formatting.provider": "autopep8"
 }
