--- a/frontend/gui/package.json
+++ b/frontend/gui/package.json
@@ -12,8 +12,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-form": "^7.4.2",
-    "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
