Backend User Authentication

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
 astroid==2.0.4
 autopep8==1.4.3
-certifi==2018.10.15
+certifi==2018.11.29
+chardet==3.0.4
 colorama==0.4.0
-dj-database-url==0.5.0
-Django==2.1.1
-django-heroku==0.3.1
-djangorestframework==3.8.2
-djangorestframework-jwt==1.11.0
+defusedxml==0.5.0
+Django==2.1.3
+django-allauth==0.38.0
+django-cors-headers==2.4.0
+django-rest-auth==0.9.3
+djangorestframework==3.9.0
+idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
-pipenv==2018.10.13
-psycopg2==2.7.5
+oauthlib==2.1.0
+pep8==1.7.1
 pycodestyle==2.4.0
-PyJWT==1.6.4
 pylint==2.1.1
-pytz==2018.5
+python3-openid==3.1.0
+pytz==2018.7
+requests==2.20.1
+requests-oauthlib==1.0.0
 six==1.11.0
-virtualenv==16.0.0
-virtualenv-clone==0.4.0
-whitenoise==4.1
+urllib3==1.24.1
 wrapt==1.10.11
