--- a/frontend/gui/package.json
+++ b/frontend/gui/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
+    "material-ui-flat-pagination": "^3.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
