--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "env/bin/python",
+  "python.pythonPath": "C:\\Python\\python.exe",
   "editor.formatOnSave": true,
   "python.linting.pep8Enabled": true,
   "python.linting.pylintPath": "pylint",
