--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "C:\\Python\\python.exe",
+  "python.pythonPath": "/Library/Frameworks/Python.framework/Versions/3.7/bin/python3",
   "editor.formatOnSave": true,
   "python.linting.pep8Enabled": true,
   "python.linting.pylintPath": "pylint",
