--- a/frontend/gui/package.json
+++ b/frontend/gui/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "material-ui-flat-pagination": "^3.1.0",
     "react": "^16.6.3",
